# linming_llmops

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/app/http/: app.py  module.py
backend/config/: config.py  default_config.py
backend/docker/: entrypoint.sh  gunicorn.conf.py
backend/internal/entity/: __init__.py  ai_entity.py  app_entity.py  chat_entity.py  dataset_entity.py  workflow_entity.py
backend/internal/exception/: __init__.py  exception.py
backend/internal/extension/: __init__.py  celery_extension.py  logging_extension.py  migrate_extension.py  redis_extension.py
backend/internal/handler/: __init__.py  account_handler.py  ai_handler.py  api_key_handler.py  api_tool_handler.py  app_handler.py  assistant_agent_handler.py  auth_handler.py  builtin_tool_handler.py  conversation_handler.py  dataset_handler.py  document_handler.py  image_generation_handler.py  language_model_handler.py  llm_admin_handler.py  openapi_handler.py  ping_handler.py  segment_handler.py  stats_handler.py  upload_file_handler.py  workflow_handler.py
backend/internal/lib/: __init__.py  crypto.py  helper.py
backend/internal/middleware/: __init__.py  decorator.py  middleware.py
backend/internal/migration/: README  alembic.ini  env.py
backend/internal/model/: __init__.py  account.py  api_key.py  api_tool.py  app.py  (+7 more)
backend/tests/: conftest.py  test_auth.py  test_jwt_password.py  test_models.py  test_ping.py  test_quota.py  test_smoke.py  test_storage.py
(+394 files in other folders)
